[tool.poetry]
name = "AutoML-CreditRiskPrediction"
version = "0.1.0"
description = "An automated ML pipeline for credit risk assessment using MLOps practices."
authors = ["Guillermo Creus <guillermocreus98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
numpy = "^1.22.3"
scikit-learn = "^1.1.1"
xgboost = "^1.5.0"
lightgbm = "^3.3.2"
mlflow = "^1.29.0"
flask = "^2.0.2"
fastapi = "^0.79.0"
uvicorn = "^0.17.0"
docker = "^5.0.0"
prometheus-client = "^0.15.0"
great-expectations = "^0.15.4"
boto3 = "^1.20.0"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
